# openscad-tui

./: .gitignore  AGENTS.md  COMMAND_REFACTOR_PLAN.md  CONFIGURATION.md  Cargo.toml  LIBRARIES_AND_INCLUDES.md  LIBRARY_MANAGEMENT.md  README.md  custom_library_example.json  openscad.md  stdlib.json
crates/assembly/: Cargo.toml
crates/assembly/src/: exporter.rs  lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  scad_parser.rs
crates/render/: Cargo.toml
crates/render/src/: camera.rs  dae.rs  error.rs  exporter.rs  framebuffer.rs  importer.rs  lib.rs  mesh.rs  off.rs  openscad.rs  pipeline.rs  rasterizer.rs  scene.rs  service.rs
crates/terminal/: Cargo.toml
crates/terminal/src/: lib.rs  protocol.rs
crates/ui/: Cargo.toml
crates/ui/src/: app.rs  command_registry.rs  commands.rs  commands.rs.backup  input.rs  input_fixed.rs  keymap.rs  kitty_protocol.rs  lib.rs  main.rs  preview.rs  project_file.rs  project_import.rs  ui.rs  ui_new.rs
