[workspace]
members = ["crates/core", "crates/library", "crates/render", "crates/ui"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["OpenSCAD TUI Contributors"]
license = "MIT"

[workspace.dependencies]
ratatui = "0.29"
crossterm = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unicode-width = "0.2"
tui-tree-widget = "0.23"
clap = { version = "4.4", features = ["derive"] }
thiserror = "1.0"
dirs = "5.0"
glam = "0.30"
tempfile = "3.20"
wait-timeout = "0.2"
image = { version = "0.25", default-features = false }
ratatui-image = { version = "5.0", default-features = false, features = ["crossterm"] }
