[workspace]
members = ["crates/assembly", "crates/core", "crates/library", "crates/render", "crates/terminal", "crates/ui"]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"
authors = ["OpenSCAD TUI Contributors"]
license = "MIT"

[workspace.dependencies]
ratatui = "0.29"
crossterm = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unicode-width = "0.2"
tui-tree-widget = "0.23"
clap = { version = "4.4", features = ["derive"] }
thiserror = "1.0"
dirs = "5.0"
glam = "0.30"
tempfile = "3.20"
wait-timeout = "0.2"
ratatui-image = { version = "5.0", default-features = false, features = ["crossterm"] }
icy_sixel = "0.1.3"
base64 = "0.21"
flate2 = "1"
jpeg-encoder = "0.7"
zip = { version = "6.0", default-features = false, features = ["deflate-flate2-zlib-rs"] }
stl_io = "0.11"

[profile.dev.package.openscad-terminal]
opt-level = 2

[profile.dev.package.icy_sixel]
opt-level = 2

[profile.dev.package.jpeg-encoder]
opt-level = 2

[profile.release]
strip = "symbols"
