[package]
name = "openscad-tui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "A command-driven terminal editor and model previewer for OpenSCAD"
repository = "https://github.com/Yunus4832/openscad-tui"
homepage = "https://github.com/Yunus4832/openscad-tui"
readme = "README.md"
keywords = ["openscad", "cad", "tui", "terminal"]
categories = ["command-line-utilities", "graphics"]

[lib]
name = "openscad_ui"
path = "crates/ui/src/lib.rs"

[[bin]]
name = "openscad-tui"
path = "crates/ui/src/main.rs"

[dependencies]
ratatui.workspace = true
crossterm.workspace = true
serde_json.workspace = true
serde.workspace = true
zip.workspace = true
tempfile.workspace = true
thiserror.workspace = true
clap.workspace = true
unicode-width.workspace = true
tui-tree-widget.workspace = true
dirs.workspace = true
ratatui-image.workspace = true
openscad-core = { path = "crates/core" }
openscad-assembly = { path = "crates/assembly" }
openscad-library = { path = "crates/library" }
openscad-render = { path = "crates/render" }
openscad-terminal = { path = "crates/terminal" }

[workspace]
members = ["crates/assembly", "crates/core", "crates/library", "crates/render", "crates/terminal"]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"
authors = ["OpenSCAD TUI Contributors"]
license = "MIT"

[workspace.dependencies]
ratatui = "0.29"
crossterm = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unicode-width = "0.2"
tui-tree-widget = "0.23"
clap = { version = "4.4", features = ["derive"] }
thiserror = "1.0"
dirs = "5.0"
glam = "0.30"
tempfile = "3.20"
wait-timeout = "0.2"
ratatui-image = { version = "5.0", default-features = false, features = ["crossterm"] }
icy_sixel = "0.1.3"
base64 = "0.21"
flate2 = "1"
jpeg-encoder = "0.7"
zip = { version = "6.0", default-features = false, features = ["deflate-flate2-zlib-rs"] }
stl_io = "0.11"
roxmltree = "0.21.1"

[profile.dev.package.openscad-terminal]
opt-level = 2

[profile.dev.package.icy_sixel]
opt-level = 2

[profile.dev.package.jpeg-encoder]
opt-level = 2

[profile.release]
strip = "symbols"
