[package]
name = "openscad-terminal"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ratatui.workspace = true
icy_sixel.workspace = true
base64.workspace = true
flate2.workspace = true
jpeg-encoder.workspace = true
openscad-render = { path = "../render" }
