[package]
name = "openscad-ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ratatui.workspace = true
crossterm.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
unicode-width.workspace = true
tui-tree-widget.workspace = true
dirs.workspace = true
image.workspace = true
ratatui-image.workspace = true
icy_sixel.workspace = true
base64.workspace = true
flate2.workspace = true
openscad-core = { path = "../core" }
openscad-library = { path = "../library" }
openscad-render = { path = "../render" }

[[bin]]
name = "openscad-tui"
path = "src/main.rs"
