[package]
name = "openscad-ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ratatui.workspace = true
crossterm.workspace = true
serde_json.workspace = true
thiserror.workspace = true
clap.workspace = true
unicode-width.workspace = true
tui-tree-widget.workspace = true
dirs.workspace = true
ratatui-image.workspace = true
openscad-core = { path = "../core" }
openscad-library = { path = "../library" }
openscad-render = { path = "../render" }
openscad-terminal = { path = "../terminal" }

[[bin]]
name = "openscad-tui"
path = "src/main.rs"

[dev-dependencies]
tempfile.workspace = true
